<resources>
    <string name="app_name">Sensor Log</string>
    <string name="action_settings">Settings</string>
    <string name="button_startSensing">Start</string>
    <string name="button_stopSensing">Stop</string>
    <string name="radio_walk">Walk</string>
    <string name="radio_sit">Sit</string>
    <string name="radio_fall">Fall</string>
    <string name="radio_other">Other</string>

    <string name="pref_activity_label">Activity</string>
    <string name="pref_activity_walk">Walk</string>
    <string name="pref_activity_sit">Sit</string>
    <string name="pref_activity_fall">Fall</string>
    <string name="pref_activity_other">Other</string>
    <string name="pref_filename">FileName</string>
    <string name="pref_filename_default">SensorLog</string>
    <string name="pref_stream">Stream</string>

    <string name="dialog_title">Save File</string>
    <string name="dialog_save">Save</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="title_activity_file">Files</string>
    <string name="hello_world">Hello world!</string>

    <string name="edittext_filename">Filename</string>
</resources>
